create grilled-shrip.html and add grilled-shimp.jpg

--- a/recipes/grilled-salmon.html
+++ b/recipes/grilled-salmon.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Grilled Salmon</title>
 </head>
 <body>
     <h1>Grilled Salmon</h1>
-    <img src="../img/grilled-salmon.jpg" alt="grilled salmon on a playe">
+    <img src="../img/grilled-salmon.jpg" alt="grilled salmon on a plate">
     <h2>Description</h2>
     <p>Follow these easy grilling tips for THE BEST, easy grilled salmon recipe that’s about to become your new favorite healthy summertime dinner.</p>
     <h3>Ingredients</h3>
