--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/grilled-salmon.html">Grilled Salmon</a>
+    <ul>
+        <li><a href="./recipes/grilled-salmon.html">Grilled Salmon</a></li>
+        <li><a href="./recipes/grilled-shrimp.html">Grilled Shrimp</a></li>
+        <li></li>
+    </ul>
+    
 </body>
 </html>
