--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <ul>
         <li><a href="./recipes/grilled-salmon.html">Grilled Salmon</a></li>
         <li><a href="./recipes/grilled-shrimp.html">Grilled Shrimp</a></li>
-        <li></li>
+        <li><a href="./recipes/pesto-baked-salmon.html">Pesto Bakes Salmon</a></li>
     </ul>
     
 </body>
